# themis

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Cartfile  Cartfile.resolved  Doxyfile  ISSUE_TEMPLATE.md  LICENSE  Makefile  PKGBUILD.MSYS2  Package.swift  README.md  READMY.txt  Themis.nsi  build.gradle  circle.yml  configure  create_xcframeworks.sh  gradle.properties  settings.gradle  themis-boringssl.podspec  themis-double.podspec  themis.podspec  themis1.podspec  travis.yml
benches/rust/: .gitignore  Cargo.toml  README.md
benches/rust/benches/: rust_secure_cell_seal_passphrase.rs  secure_cell_context_imprint_master_key.rs  secure_cell_seal_master_key.rs  secure_cell_seal_passphrase.rs  secure_cell_token_protect_master_key.rs
benches/themis/: Cargo.toml  README.md
benches/themis/benches/: secure_cell_context_imprint_master_key.rs  secure_cell_seal_master_key.rs  secure_cell_seal_passphrase.rs  secure_cell_token_protect_master_key.rs  secure_cell_wrapped_context_imprint_master_key.rs  secure_cell_wrapped_seal_master_key.rs  secure_cell_wrapped_seal_passphrase.rs  secure_cell_wrapped_token_protect_master_key.rs  secure_message_encrypt_decrypt_ecdsa.rs  secure_message_encrypt_decrypt_rsa.rs  secure_message_sign_verify_ecdsa.rs  secure_message_sign_verify_rsa.rs
jni/: Android.mk  Application.mk  CMakeLists.txt  crypto_dummy.c  themis_cell.c  themis_compare.c  themis_jni.c  themis_jni.mk  themis_keygen.c  themis_message.c  themis_session.c
jni/openssl/: ssl.h
src/wrappers/themis/python/: AUTHORS  MANIFEST.in  PKG-INFO  README.md  README.rst  exception.py  pyproject.toml  scell.py  setup.cfg  setup.py  skeygen.py  skeygen_test.py  smessage.py  smessage_test.py  ssession.py  ssession_mem_transport.py
src/wrappers/themis/python/pythemis/: __init__.py  exception.py  scell.py  scomparator.py  skeygen.py  smessage.py  ssession.py  tests.py
src/wrappers/themis/python/pythemis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/wrappers/themis/python/themis/: exception.py  scell.py  skeygen.py  smessage.py  ssession.py
src/wrappers/themis/rust/: CHANGELOG.md  Cargo.toml  LICENSE  README.md  examples  tests
src/wrappers/themis/rust/libthemis-src/: Cargo.toml  README.md
src/wrappers/themis/rust/libthemis-src/src/: lib.rs
src/wrappers/themis/rust/libthemis-src/themis/: Makefile  README.md  VERSION  configure  jni  scripts  tests  tools
src/wrappers/themis/rust/libthemis-sys/: Cargo.toml  README.md  bindgen.sh  build.rs
src/wrappers/themis/rust/libthemis-sys/src/: dummy.c  lib.rs  wrapper.c  wrapper.h
src/wrappers/themis/rust/libthemis-sys/tests/: sanity.rs
src/wrappers/themis/rust/pkgconfig/local/: libsoter.pc  libthemis.pc
src/wrappers/themis/rust/pkgconfig/system/: libsoter.pc  libthemis.pc
src/wrappers/themis/rust/src/: error.rs  keygen.rs  keys.rs  lib.rs  secure_cell.rs  secure_comparator.rs  secure_message.rs  secure_session.rs  utils.rs
tests/tools/splint/source/: Makefile.am  Makefile.binary.am  Makefile.binary.in  Makefile.in  README  acinclude.m4  aclocal.m4  config.hin  configure  configure.ac  configure.binary  configure.binary.ac  fixBinaryDist.sh  install.html
tests/tools/splint/source/config/: mkinstalldirs
tests/tools/splint/source/doc/: Makefile.am  Makefile.in  darwin.html  freebsd.html  linux.html  manual.css  splint.1  sunos.html
tests/tools/splint/source/doc/html/: footer.html  header.html  manual.htm  realloc.htm
tests/tools/splint/source/imports/: Makefile.am  Makefile.in  assert.lcl  assert.lcs  ctype.lcl  ctype.lcs  errno.lcl  errno.lcs  limits.lcl  limits.lcs  locale.lcl  locale.lcs  math.lcl  math.lcs  setjmp.lcl  setjmp.lcs  signal.lcl  signal.lcs  stdarg.lcl  stdarg.lcs  stdio.lcl  stdio.lcs  stdlib.lcl  stdlib.lcs  string.lcl  string.lcs  time.lcl  time.lcs
tests/tools/splint/source/lib/: CTrait.syms  CTraitGen.lcl  Makefile.am  Makefile.in  bool.h  file.mts  file.xh  lclinit.lci  linux.h  lslinit.lsi  posix.h  posix.lcd  posixstrict.lcd  standard.h  standard.lcd  standardstrict.lcd  stdio.h  stdlib.h  tainted.mts  tainted.xh  unix.h  unix.lcd  unixstrict.lcd
tests/tools/splint/source/src/: .splintrc  LICENSE  Makefile.am  Makefile.in  abstract.c  aliasTable.c  annotationInfo.c  annotationTable.c  bison.head  bison.reset  cgrammar.c  cgrammar.y  checking.c  clabstract.c  clause.c  clauseStack.c  constraint.c  constraintExpr.c  constraintExprData.c  constraintGeneration.c  constraintList.c  constraintResolve.c  constraintTerm.c  context.c  cpperror.c  cppexp.c  cpphash.c  cpplib.c  cppmain.c  cprim.c  cscanner.c  cscanner.l  cscannerHelp.c  cstring.c  cstringList.c  cstringSList.c  cstringTable.c  ctbase.i  cttable.i  ctype.c  (+162 more)
tests/tools/splint/source/src/Headers/: 256_random_numbers.nf  CTypesNode.h  abstBodyNode.h  abstract.h  abstractNode.h  aliasStack.h  aliasTable.h  annotationInfo.h  annotationTable.h  arrayQualNode.h  basic.h  bool.h  boolStack.h  cgrammar.h  cgrammar_tokens.h  checking.h  clabstract.h  claimNode.h  clause.h  clauseStack.h  code.h  constDeclarationNode.h  constants.h  constraint.h  constraintExpr.h  (+249 more)
tests/tools/splint/source/test/: Makefile.am  Makefile.in  Makefile.os2  abst_t.lcl  abstptr.c  abstptr.expect  abstptr.lcl  abstract.expect  alias.c  alias.expect  alias.lcl  alias2.c  alias2.lcl  alias3.c  alias3.lcl  alias4.c  alias4.lcl  alias5.c  alias5.lcl  alttypes.c  alttypes.expect  ansireserved.c  ansireserved.expect  ansireserved2.c  argorder.c  argorder.expect  argorder2.c  argorder2.lcl  argorder3.c  argorder4.c  argorder4.lcl  argorder5.c  args.c  args.expect  args.lcl  arraydims.c  arraydims.expect  arrayinit.c  arrayinit.expect  arraylit.c  (+332 more)
tools/rust/: .gitignore  Cargo.toml  README.md  keygen.rs  keygen.sh  keygen_tool.rs  scell_context_string_echo.rs  scell_context_string_echo.sh  scell_seal_string_echo.rs  scell_seal_string_echo.sh  scell_seal_string_echo_pw.rs  scell_token_string_echo.rs  scell_token_string_echo.sh  smessage_encryption.rs  smessage_encryption.sh
(+1894 files in other folders)
