[package]
name = "themis"
version = "0.0.3"
edition = "2018"
authors = ["rust-themis developers"]
description = "High-level cryptographic services for storage and messaging"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/cossacklabs/themis"
readme = "src/wrappers/themis/rust/README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "api-bindings"]
license = "Apache-2.0"
include = [
    "Cargo.toml",
    "docs/examples/rust/**/*",
    "src/wrappers/themis/rust/**/*",
    "tests/rust/**/*",
]

[badges]
circle-ci = { repository = "cossacklabs/themis", branch = "master" }
maintenance = { status = "actively-developed" }

[workspace]

[lib]
path = "src/wrappers/themis/rust/src/lib.rs"

[features]
vendored = ["bindings/vendored"]

[dependencies]
bindings = { package = "libthemis-sys", path = "src/wrappers/themis/rust/libthemis-sys", version = "=0.0.3" }
zeroize = "0.5.2"

[dev-dependencies]
base64 = "0.10.0"
byteorder = "1.2.7"
clap = "2.32"
lazy_static = "1.2.0"
log = "0.4.6"
env_logger = "0.6.0"

[package.metadata.docs.rs]
features = ["vendored"]
dependencies = ["libssl-dev"]

[[example]]
name = "keygen"
path = "docs/examples/rust/keygen.rs"

[[example]]
name = "secure_cell"
path = "docs/examples/rust/secure_cell.rs"

[[example]]
name = "secure_compare"
path = "docs/examples/rust/secure_compare.rs"

[[example]]
name = "secure_message_client_encrypt"
path = "docs/examples/rust/secure_message_client_encrypt.rs"

[[example]]
name = "secure_message_client_verify"
path = "docs/examples/rust/secure_message_client_verify.rs"

[[example]]
name = "secure_message_server"
path = "docs/examples/rust/secure_message_server.rs"

[[example]]
name = "secure_session_echo_server"
path = "docs/examples/rust/secure_session_echo_server.rs"

[[example]]
name = "secure_session_echo_client"
path = "docs/examples/rust/secure_session_echo_client.rs"

[[example]]
name = "keygen_tool"
path = "tools/rust/keygen_tool.rs"

[[example]]
name = "scell_context_string_echo"
path = "tools/rust/scell_context_string_echo.rs"

[[example]]
name = "scell_seal_string_echo"
path = "tools/rust/scell_seal_string_echo.rs"

[[example]]
name = "scell_token_string_echo"
path = "tools/rust/scell_token_string_echo.rs"

[[example]]
name = "smessage_encryption"
path = "tools/rust/smessage_encryption.rs"

[[test]]
name = "keys"
path = "tests/rust/keys.rs"

[[test]]
name = "secure_cell"
path = "tests/rust/secure_cell.rs"

[[test]]
name = "secure_comparator"
path = "tests/rust/secure_comparator.rs"

[[test]]
name = "secure_message"
path = "tests/rust/secure_message.rs"

[[test]]
name = "secure_session"
path = "tests/rust/secure_session.rs"
