[package]
name = "themis"
version = "0.14.0"
edition = "2018"
rust-version = "1.60.0"
authors = ["rust-themis developers"]
description = "High-level cryptographic services for storage and messaging"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/cossacklabs/themis"
readme = "README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "api-bindings"]
license = "Apache-2.0"
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/examples/**/*.rs",
    "/src/**/*.rs",
    "/tests/**/*.rs",
]

[badges]
circle-ci = { repository = "cossacklabs/themis", branch = "master" }
maintenance = { status = "actively-developed" }

[dependencies]
bindings = { package = "libthemis-sys", path = "libthemis-sys", version = "0.14.0" }
zeroize = "1"

[dev-dependencies]
base64 = "0.10.0"
# Freeze byteorder, log, memchr, regex so that tests still build/run with Rust 1.60.
# `regex` is dependency of `env_logger`, 1.9.6 switched to Rust 1.65.
# `memchr` is dependency of `regex`, at the time of writing this latest version required Rust 1.65.
# FIXME: remove/update strict version requirement after we bump minimum required Rust version
byteorder = "=1.4.3"
clap = "2.32"
lazy_static = "1.2.0"
log = "=0.4.17"
env_logger = "0.6.0"
regex = "=1.9.5"
memchr = "=2.6.1"
