[package]
name = "libthemis-sys"
version = "0.12.0"
edition = "2018"
authors = ["rust-themis developers"]
description = "FFI binding to libthemis"
homepage = "https://www.cossacklabs.com/themis/"
repository = "https://github.com/cossacklabs/themis"
readme = "README.md"
keywords = ["crypto", "Themis"]
categories = ["cryptography", "external-ffi-bindings"]
license = "Apache-2.0"
links = "themis"

[badges]
circle-ci = { repository = "cossacklabs/themis", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
vendored = ["libthemis-src"]

[build-dependencies]
bindgen = "0.46.0"
cc = "1.0.28"
libthemis-src = { path = "../libthemis-src", version = "0.12.0", optional = true }
pkg-config = "0.3.14"

[package.metadata.docs.rs]
features = ["vendored"]
dependencies = ["libssl-dev"]
