## Note: starting comments with ## means they don't end up in Makefile

AUTOMAKE_OPTIONS = 1.5 foreign

#this is just a hack to get make dist to work.

## Include them in the distribution
EXTRA_DIST = splint.1 freebsd.html linux.html sunos.html darwin.html manual.pdf  manual.css html/manual.htm html/footer.html html/header.html html/realloc.htm

man_MANS = splint.1 

all: